# pybind11_skbuild_cibuildwheel_example

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  noxfile.py  pyproject.toml  setup.py
.github/workflows/: cd.yml
src/: cli11.cpp
src/cli11/: __init__.py
tests/: test_works.py
